Fixed alignment of images

--- a/style.css
+++ b/style.css
@@ -36,22 +36,22 @@ main {
     padding-left: 20vh;
 }
 .cat{
-    block-size: 500px;
+    block-size: 600px;
+    object-fit: cover;
 }
 h1{
-    padding: 5%;
     text-align: center;
 }
 p{
     padding: 10%;
-    padding-top: 0;
-    padding-bottom: 0;
 }
 .images{
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 500vh;
+    object-fit: scale-down;
+    min-width: 100vh;
+    max-width: 500vh;
     background-image: url("data:image/svg+xml,<svg id='patternId' width='100%' height='100%' xmlns='http://www.w3.org/2000/svg'><defs><pattern id='a' patternUnits='userSpaceOnUse' width='20' height='20' patternTransform='scale(2) rotate(0)'><rect x='0' y='0' width='100%' height='100%' fill='hsla(0,0%,100%,1)'/><path d='M 10,-2.55e-7 V 20 Z M -1.1677362e-8,10 H 20 Z'  stroke-width='1' stroke='hsla(0, 0%, 0%, 0.17)' fill='none'/></pattern></defs><rect width='800%' height='800%' transform='translate(0,0)' fill='url(%23a)'/></svg>");
     background-attachment: fixed;
     background-position: center;
@@ -62,9 +62,11 @@ p{
     block-size: 500px;
     margin: 5%;
     margin-bottom: 0;
-    object-fit: cover;
+    object-fit: fill;
     max-width: 400px;
     max-height: 400px;
+    min-width: 200px;
+    min-height: 200px;
     border-style: solid;
     border-width: 10px;
     border-radius: 20px;
